--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
             <img src="img/Logo-teh.svg" alt="Логотип компании «Техномарт»">
           </a>
           <form class="main-order-search" action="https://echo.htmlacademy.ru" method="post">
-            <input id="search-field" type="search" name="search" placeholder="Поиск">
-            <lable for="search-field"></lable>
+            <input id="search-field" type="search" name="search" placeholder="Поиск:">
+            <label for="search-field"></label>
           </form>
           <ul class="order-navigation no-indentation">
             <li><a class="order-navigation-inbookmarks" href="">Закладки: 0</a></li>
@@ -31,8 +31,8 @@
           <address>г. Санкт-Петербург, ул. Б. Конюшенная, д.19/8</address>
         </div>
         <div class="button-order">
-          <a href="" class="button-sign" type="button">Войти</a>
-          <a href="" class="button-reg" type="button">Регистрация</a>
+          <a href="" class="button-sign">Войти</a>
+          <a href="" class="button-reg">Регистрация</a>
         </div>  
       </div>   
       <nav class="main-navigation">
@@ -71,6 +71,14 @@
             <a class="button-categories" href="">Бесплатно</a></li>
           <li class="categories-slider">
             <div class="perfocart-slide">
+              <div class="slide-nav">
+                <a class="slide-nav-next" href=""></a>
+                <a class="slide-nav-back" href=""></a>
+              </div>
+              <div class="slide-button">
+                <a class="slide-button-next active" href=""></a>
+                <a class="slide-button-back" href=""></a>
+              </div>
               <img src="img/Perfocart.jpg" alt="Перфораторы"> <!--Слайдер-->
               <h2>Перфораторы</h2>
               <p>Настоящие мужские игрушки</p>
@@ -91,75 +99,75 @@
         <h2 class="notheading">Товары</h2>
         <div class="products-block">
           <h3>Популярные товары:</h3>
-          <a class="products-block-nav" href="">
+          <a class="products-block-nav button-state" href="">
             Все популярные товары
           </a>
         </div>
-        <div class="products-list">
-          <div class="products-item">
+        <ul class="products-list">
+          <li class="products-item">
             <div class="products-item-bay">
               <button type="button" class="buuton-bay">Купить</button>
               <button type="button" class="buuton-bookmarks">В Закладки</button>
             </div>
             <figure class="products-item-image">
-              <img class="image-bay" src="img/Bfg-9000.jpg" alt="Перфоратор BOSCH BFG 9000">
+              <img src="img/Bfg-9000.jpg" alt="Перфоратор BOSCH BFG 9000">
             </figure>
             <span>Перфоратор BOSCH<br>BFG 9000</span>
             <span><del>32500 Р.</del></span>
-              <a class="button-products" href="">25&nbsp500&nbspр.</a>
-          </div>
-          <div class="products-item">
+            <a class="button-products" href="">25&nbsp;500&nbsp;р.</a>
+          </li>
+          <li class="products-item">
             <div class="products-item-flag"></div>
             <div class="products-item-bay">
               <button type="button" class="buuton-bay">Купить</button>
               <button type="button" class="buuton-bookmarks">В Закладки</button>
             </div>
             <figure class="products-item-image">
-              <img class="image-bay" src="img/bfg-3000.jpg" alt="Перфоратор BOSCH BFG 3000">
+              <img src="img/bfg-3000.jpg" alt="Перфоратор BOSCH BFG 3000">
             </figure>
             <span>Перфоратор BOSCH <br>BFG 3000</span>
             <span><del>22500 Р.</del></span>
-            <a class="button-products" href="">15500</a>
-          </div> 
-          <div class="products-item">
+            <a class="button-products" href="">15&nbsp;500&nbsp;р.</a>
+          </li> 
+          <li class="products-item">
             <div class="products-item-bay">
               <button type="button" class="buuton-bay">Купить</button>
               <button type="button" class="buuton-bookmarks">В Закладки</button>
             </div>
             <figure class="products-item-image">
-              <img class="image-bay" src="img/bfg-6000.jpg" alt="Перфоратор BOSCH BFG 6000">
+              <img src="img/bfg-6000.jpg" alt="Перфоратор BOSCH BFG 6000">
             </figure>
             <span>Перфоратор BOSCH <br>BFG 6000</span>
             <span><del>30500 Р.</del></span>
-            <a class="button-products" href="">25500</a>
-          </div>
-          <div class="products-item">
+            <a class="button-products" href="">25&nbsp;500&nbsp;р.</a>
+          </li>
+          <li class="products-item">
             <div class="products-item-flag"></div>
             <div class="products-item-bay">
               <button type="button" class="buuton-bay">Купить</button>
               <button type="button" class="buuton-bookmarks">В Закладки</button>
             </div>
             <figure class="products-item-image">
-              <img class="image-bay" src="img/bfg-3000.jpg" alt="Перфоратор BOSCH BFG 9000">
+              <img src="img/bfg-3000.jpg" alt="Перфоратор BOSCH BFG 9000">
             </figure>
             <span>Перфоратор BOSCH <br>BFG 2000</span>
             <span class="notheading">1</span>
-            <a class="button-products" href="">12500</a>
-          </div>  
+            <a class="button-products" href="">12&nbsp;500&nbsp;р.</a>
+          </li>  
         </div>
       </section>
       <section class="manufactures">
         <h2 class="notheading">Производители</h2>
         <div class="manufactures-block">
           <h2>Популярные производители:</h2>
-          <a class="manufactures-block-nav" href="">
+          <a class="manufactures-block-nav button-state" href="">
             Все производители
           </a>
         </div>
         <ul class="manufactures-list no-bulites">
           <li>
             <a href="">
-              <img class="manufactures-list-logo" src="img/logo-bosch.jpg" alt="Логотип партнера Bosch">
+              <img class="manufactures-list-logo" src="img/logo-bosch.jpg"   alt="Логотип партнера Bosch">
             </a>
           </li>
           <li>
@@ -205,13 +213,13 @@
         <div class="service-slide">
           <ul class="service-list no-bulites">
             <li>
-              <button class="service-list-delivery" type="button">Доставка</button>
+              <a class="service-list-delivery active">Доставка</a>
             </li>
             <li>
-              <button class="service-list-warranty" type="button">Гарантия</button>
+              <a class="service-list-warranty">Гарантия</a>
             </li>
             <li>
-              <button class="service-list-credit" type="button">Кредит</button>
+              <a class="service-list-credit">Кредит</a>
             </li>
           </ul> 
           <div class="service-slide-delivery">
@@ -243,7 +251,7 @@
         <div>
           <h2>Компания «Техномарт»</h2>
           <p>Настоящий мужской шопинг начинается здесь! Огромный выбор товаров для <br>ремонтаи строительства не оставит равнодушными любителей сэкономить на <br>гастарбайтерах</p>
-          <p>Мы можем доставить ваш товар в самые отдаленные точки России! </br>Техномарт работает со многими тарнспортными компаниями:</p>
+          <p>Мы можем доставить ваш товар в самые отдаленные точки России! <br>Техномарт работает со многими тарнспортными компаниями:</p>
           <ul class="details-list no-bulites">
             <li>Деловые линии</li>
             <li>Автотрейдинг</li>
@@ -254,23 +262,26 @@
         <div class="details-contact">
           <h2>Контакты</h2>
           <p>Вы можете забрать товар сами, <br>заехав в наш офис:</p>
-          <p><img src="img/Karta.jpg" alt="Карта как нас найти"></p>
+          <div>
+            <a href="#openModalMap">
+              <img src="img/Karta.jpg" alt="Карта как нас найти">
+            </a>
+            <div id="openModalMap" class="modalMap">
+              <a class="modalMap-close" href=""></a>
+            </div> 
+          </div>
           <a class="details-list-lost" href="#openModalLost">Заблудились? Напишите нам!</a>
           <div id="openModalLost" class="modalLost" >
             <a class="modalLost-close" href=""></a>
             <form action="https//echo.htmlacademy.ru" method="post">
               <label class="signature-form" for=your-name>Ваше имя:</label>
               <input class="name-form" type="text" id="your-name" name="your-name" placeholder="Имя Фамилия">
-            </form>
-            <form action="https//echo.htmlacademy.ru" method="post">
               <label class="youremail-form" for=your-email>Ваш e-mail:</label>
               <input class="email-form" type="text" id="your-email" name="your-email" placeholder="email@example.com">
-            </form>
-            <form action="https//echo.htmlacademy.ru" method="post">
               <label class="letter-text" for="letter-field">Текст письма:</label>
               <textarea class="letter-form" id="letter-field">В свободной форме</textarea>
+              <button class="modalLost-send" type="submit">Отправить</button>
             </form>
-            <button class="modalLost-send" type="button">Отправить</button>
           </div>
         </div>
       </section>
@@ -294,7 +305,7 @@
             <div class="footer-cat no-bulites">
               <div class="footer-cat-addres">
                 <address>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</address>
-                <a href="tel:88125550555">+7 (812) 555-05-55</a></li>
+                <a href="tel:88125550555">+7 (812) 555-05-55</a>
               </div>
               <ul class="footer-cat-nav no-bulites">
                 <li><a href="">Материалы</a></li>
@@ -314,28 +325,19 @@
           </div>
           <div>  
             <ul class="footer-social no-bulites">
-              <li class="social">
+              <li class="social-vk social">
                 <a href="">
-                  <svg width="26" height="15" viewBox="0 0 26 15" transform="translate(10, 15)" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <path d="M15.5403 11.7281C16.4609 11.4384 17.6396 13.6406 18.8943 14.4834C19.8361 15.1219 20.5573 14.9841 20.5573 14.9841L23.9017 14.9372C23.9017 14.9372 25.6495 14.8322 24.8233 13.4803C24.7549 13.3678 24.3389 12.4781 22.334 10.6472C20.2376 8.73186 20.5217 9.04218 23.0456 5.73093C24.5835 3.71249 25.1988 2.47968 25.0062 1.95468C24.8213 1.44936 23.6918 1.58061 23.6918 1.58061L19.9237 1.60593C19.5568 1.60686 19.2458 1.71749 19.1042 2.08874C19.1013 2.09249 18.5062 3.65061 17.7127 4.9753C16.0362 7.77749 15.367 7.92655 15.0896 7.75124C14.4531 7.3453 14.6139 6.1228 14.6139 5.25374C14.6139 2.5378 15.0299 1.4053 13.7993 1.1128C13.3881 1.0153 13.0876 0.951552 12.039 0.942177C10.6985 0.922489 9.5603 0.942177 8.91511 1.25061C8.4866 1.45968 8.15822 1.91811 8.35756 1.94436C8.60793 1.97718 9.16934 2.09436 9.46978 2.49374C9.85593 3.01124 9.84437 4.17093 9.84437 4.17093C9.84437 4.17093 10.0649 7.36874 9.32437 7.7653C8.81593 8.03718 8.12067 7.48218 6.62519 4.9378C5.86156 3.63655 5.28474 2.19843 5.28474 2.19843C5.28474 2.19843 5.17304 1.93124 4.97082 1.78499C4.73008 1.61155 4.39304 1.55624 4.39304 1.55624L0.816594 1.57874C0.816594 1.57874 0.279261 1.59374 0.0818532 1.82436C-0.0934061 2.02874 0.0674088 2.45061 0.0674088 2.45061C0.0674088 2.45061 2.86867 8.90155 6.04067 12.1509C8.94882 15.1341 12.2537 14.9362 12.2537 14.9362H13.7511C13.7511 14.9362 14.2027 14.8856 14.4339 14.6437C14.6496 14.4187 14.6399 13.9959 14.6399 13.9959C14.6399 13.9959 14.6101 12.0187 15.5403 11.7281Z" fill="white"/>
-                  </svg> 
-                <span class="social-hidden">Вконтакте</span> 
+                  <span class="social-hidden">Вконтакте</span>  
                 </a> 
               </li>
-              <li class="social">
+              <li class="social-face social">
                 <a href="">
-                  <svg width="12" height="22" viewBox="0 0 12 22" transform="translate(15, 12)" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M12 4V0H8C5.79086 0 4 1.79086 4 4V8H0V12H4V22H8V12H12V8H8V4H12Z" fill="white"/>
-                  </svg>
                   <span class="social-hidden">Фейсбук</span>
                 </a>
               </li>
-              <li class="social">
+              <li class="social-inst social">
                 <a href="">
-                  <svg width="21" height="21" viewBox="0 0 21 21"  transform="translate(12, 12)" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path fill-rule="evenodd" clip-rule="evenodd" d="M3 0H18C19.65 0 21 1.35 21 3V18C21 19.65 19.65 21 18 21H3C1.35 21 0 19.65 0 18V3C0 1.35 1.35 0 3 0ZM14 10.5C14 8.57 12.43 7 10.5 7C8.57 7 7 8.57 7 10.5C7 12.43 8.57 14 10.5 14C12.43 14 14 12.43 14 10.5ZM3 18V9H4.181C4.0626 9.49127 4.00186 9.99467 4 10.5C4 14.0899 6.91015 17 10.5 17C14.0899 17 17 14.0899 17 10.5C16.9986 9.99464 16.9379 9.49118 16.819 9H18V18H3ZM14 7H18V3H14V7Z" fill="white"/>
-                  </svg>
-                  <span class="social-hidden" href="">Инстаграмм</span>
+                  <span class="social-hidden">Инстаграмм</span>
                 </a>
               </li>
             </ul>
@@ -348,7 +350,6 @@
           </div>
         </div> 
       </div>
-      </section>
     </footer>
   </body>
 </html>
