--- a/Catalog.html
+++ b/Catalog.html
@@ -45,7 +45,7 @@
         </div>   
         <nav class="main-navigation">
           <ul class="site-navigation no-bulites">
-            <li><a href="">Главная</a></li>
+            <li><a href="index.html">Главная</a></li>
             <li><a href="">Компания</a></li>
             <li><a href="Catalog.html">Каталог</a></li>
             <li><a href="">Новости</a></li>
@@ -82,7 +82,7 @@
                   <li><a href="">По типу</a></li>
                   <li><a href="">По функционалу</a></li>
                 </ul>
-                <ul class="no-bulites">
+                <ul class="catolog-sorting-button no-bulites">
                   <li><a href="" class="catalog-sorting-up active"></a></li>
                   <li><a href="" class="catalog-sorting-down"></a></li>
                 </ul>
