--- a/index.html
+++ b/index.html
@@ -327,17 +327,17 @@
             <ul class="footer-social no-bulites">
               <li class="social-vk social">
                 <a href="">
-                  <span class="social-hidden">Вконтакте</span>  
+                  <span class="visually-hidden">Вконтакте</span>  
                 </a> 
               </li>
               <li class="social-face social">
                 <a href="">
-                  <span class="social-hidden">Фейсбук</span>
+                  <span class="visually-hidden">Фейсбук</span>
                 </a>
               </li>
               <li class="social-inst social">
                 <a href="">
-                  <span class="social-hidden">Инстаграмм</span>
+                  <span class="visually-hidden">Инстаграмм</span>
                 </a>
               </li>
             </ul>
