--- a/index.html
+++ b/index.html
@@ -263,11 +263,19 @@
           <h2>Контакты</h2>
           <p>Вы можете забрать товар сами, <br>заехав в наш офис:</p>
           <div>
-            <a href="#openModalMap">
+            <a class="modalMapOpen" href="">
               <img src="img/Karta.jpg" alt="Карта как нас найти">
             </a>
             <div id="openModalMap" class="modalMap">
               <a class="modalMap-close" href=""></a>
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!
+              1m3!1d1998.6037999040354!2d30.322010416394033!3d59.9387162719
+              71415!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x469
+              6310fca5ba729%3A0xea9c53d4493c879f!2sBolshaya+Konyushennaya+ul.
+              %2C+19%2C+Sankt-Peterburg%2C+Russia%2C+191186!5e0!3m2!1sen!2s!4
+              v1441888483426" width="940" height="449" allowfullscreen title=
+              "Офис компании по адресу ул. Большая Конюшенная 19/8, Санкт-Пет
+              ербург"></iframe>
             </div> 
           </div>
           <a class="details-list-lost" href="">Заблудились? Напишите нам!</a>
