--- a/Catalog.html
+++ b/Catalog.html
@@ -11,16 +11,16 @@
         <div class="main-order-bar">
           <nav class="main-order">
             <a class="header-logo" href="index.html">
-              <img src="img/Logo-teh.svg" alt="Логотип компании «Техномарт»">
+              <img src="img/Logo-teh.svg" width="108" height="18" alt="Логотип компании «Техномарт»">
             </a>
             <form class="main-order-search" action="https://echo.htmlacademy.ru" method="post">
               <input id="search-field" type="search" name="search" placeholder="Поиск:">
               <label aria-label="search" for="search-field"></label>
             </form>
             <ul class="order-navigation no-indentation">
-              <li><a class="order-navigation-inbookmarks" href="">Закладки: 0</a></li>
-              <li><a class="order-inbasket activebacground" href="">Корзина:10</a></li>
-              <li><a class="order-navigation-arrange" href="">Оформить заказ</a></li>
+              <li><a class="order-navigation-inbookmarks" href="#">Закладки: 0</a></li>
+              <li><a class="order-inbasket activebacground" href="#">Корзина:10</a></li>
+              <li><a class="order-navigation-arrange" href="#">Оформить заказ</a></li>
             </ul>
           </nav>
         </div>
@@ -34,34 +34,36 @@
           </div>
           <div class="button-order-private">
             <div class="button-link">
-              <a href="" class="button-private">Равшан Джамшутович</a>
-              <a class="button-private-exit" href=""></a>
+              <a href="#" class="button-private">Равшан Джамшутович</a>
+              <a class="button-private-exit" href="#">
+                <span class="visually-hidden">Войти</span>
+              </a>
             </div> 
             <div class="private-nav">
-              <a href="" class="private-nav-button">Мои заказы</a>
-              <a href="" class="private-nav-button">Личный кабинет</a>
+              <a href="#" class="private-nav-button">Мои заказы</a>
+              <a href="#" class="private-nav-button">Личный кабинет</a>
             </div>  
           </div>  
         </div>   
         <nav class="main-navigation">
           <ul class="site-navigation no-bulites">
             <li><a href="index.html">Главная</a></li>
-            <li><a href="">Компания</a></li>
+            <li><a href="#">Компания</a></li>
             <li><a href="Catalog.html">Каталог</a></li>
-            <li><a href="">Новости</a></li>
-            <li><a href="">Спецпредложения</a></li>
-            <li><a href="">Доставка</a></li>
-            <li><a href="">Контакты</a></li>
+            <li><a href="#">Новости</a></li>
+            <li><a href="#">Спецпредложения</a></li>
+            <li><a href="#">Доставка</a></li>
+            <li><a href="#">Контакты</a></li>
           </ul>
         </nav>  
       </header>
       <main class="page-maincatolog">
         <div class="page-maincatolog-nav">
           <h1 class="notheading">Перфораторы</h1>
-          <a class="catalog-navigation-home" href=""></a>
+          <a class="catalog-navigation-home" href="#"></a>
           <ul class="catalog-navigation no-bulites">
             <li><a href="Catalog.html">Каталог</a></li>
-            <li><a href="">Инструмент</a></li>
+            <li><a href="#">Инструмент</a></li>
             <li><a>Перфораторы</a></li>
           </ul>
           <div class="catalog-heading">
@@ -78,13 +80,13 @@
               <div class="catalog-filter-sorting">
                 <span>Сортировка:</span>
                 <ul class="catalog-sorting no-bulites">
-                  <li><a class="active" href="">По цене</a></li>
-                  <li><a href="">По типу</a></li>
-                  <li><a href="">По функционалу</a></li>
+                  <li><a class="active" href="#">По цене</a></li>
+                  <li><a href="#">По типу</a></li>
+                  <li><a href="#">По функционалу</a></li>
                 </ul>
                 <ul class="catalog-corting-nav no-bulites">
-                  <li><a href="" class="catolog-sorting-button catalog-sorting-up active"></a></li>
-                  <li><a href="" class="catolog-sorting-button catalog-sorting-down"></a></li>
+                  <li><a href="#" class="catolog-sorting-button catalog-sorting-up active"></a></li>
+                  <li><a href="#" class="catolog-sorting-button catalog-sorting-down"></a></li>
                 </ul>
               </div>
             </div>
@@ -109,6 +111,7 @@
                         <input type="number" name='max-price' value="30000">
                       </label>
                     </div>
+                  </div>  
                 </fieldset>
                 <fieldset class="filter-manufactures">
                   <legend>Производители:</legend>
@@ -135,11 +138,11 @@
                     </li>
                   </ul>
                 </fieldset>
-                <fieldest class="filter-feed">
+                <fieldset class="filter-feed">
                   <legend>Питание:</legend>
                   <ul class="radio-feed no-bulites">
                     <li>
-                      <input type="radio" name="power" id="radio-battery" value="radio-battery">
+                      <input type="radio" name="power" id="radio-battery" value="radio-battery" checked>
                       <label for="radio-battery">Аккумуляторные</label>
                     </li>
                     <li>
@@ -147,12 +150,12 @@
                       <label for="radio-network">Сетевые</label>
                     </li>
                   </ul>
-                </fieldest>
+                </fieldset>
                 <div class="filtr-button-show">
                   <button type="submit" class="filtr-button">Показать</button>
                 </div>
-              </div>
               </form>
+            </div>  
             <ul class="products-list-catalog no-bulites">
               <li class="products-item">
                 <div class="products-item-bay">
@@ -160,7 +163,7 @@
                   <button type="button" class="buuton-bookmarks">В Закладки</button>
                 </div>
                 <figure class="products-item-image">
-                  <img src="img/bfg-6000.jpg" alt="Перфоратор BOSCH BFG 6000">
+                  <img src="img/bfg-6000.jpg" width="144" height="128" alt="Перфоратор BOSCH BFG 6000">
                 </figure>
                 <span>Перфоратор BOSCH <br>BFG 6000<br><del>30500 Р.</del></span>
                 <a class="button-products" href="#openModalMap">25&nbsp;500&nbsp;р.</a>
@@ -171,10 +174,10 @@
                   <button type="button" class="buuton-bookmarks">В Закладки</button>
                 </div>
                 <figure class="products-item-image">
-                  <img src="img/bfg-6000.jpg" alt="Перфоратор BOSCH BFG 6000">
+                  <img src="img/bfg-6000.jpg" width="144" height="128" alt="Перфоратор BOSCH BFG 6000">
                 </figure>
                 <span>Перфоратор BOSCH <br>BFG 6000<br><del>30500 Р.</del></span>
-                <a class="button-products" href="">23&nbsp;500&nbsp;р.</a>
+                <a class="button-products" href="#">23&nbsp;500&nbsp;р.</a>
               </li>
               <li class="products-item">
                 <div class="products-item-bay">
@@ -182,10 +185,10 @@
                   <button type="button" class="buuton-bookmarks">В Закладки</button>
                 </div>
                 <figure class="products-item-image">
-                  <img src="img/bfg-6000.jpg" alt="Перфоратор BOSCH BFG 6000">
+                  <img src="img/bfg-6000.jpg" width="144" height="128" alt="Перфоратор BOSCH BFG 6000">
                 </figure>
                 <span>Перфоратор BOSCH <br>BFG 6000<br><del>30500 Р.</del></span>
-                <a class="button-products" href="">15&nbsp;500&nbsp;р.</a>
+                <a class="button-products" href="#">15&nbsp;500&nbsp;р.</a>
               </li>
               <li class="products-item">
                 <div class="products-item-bay">
@@ -193,10 +196,10 @@
                   <button type="button" class="buuton-bookmarks">В Закладки</button>
                 </div>
                 <figure class="products-item-image">
-                  <img src="img/bfg-3000.jpg" alt="Перфоратор BOSCH BFG 3000">
+                  <img src="img/bfg-3000.jpg" width="127" height="112" alt="Перфоратор BOSCH BFG 3000">
                 </figure>
                 <span>Перфоратор BOSCH <br>BFG 3000<br><del>22500 Р.</del></span>
-                <a class="button-products" href="">15&nbsp;500&nbsp;р.</a>
+                <a class="button-products" href="#">15&nbsp;500&nbsp;р.</a>
               </li>
               <li class="products-item">
                 <div class="products-item-bay">
@@ -204,10 +207,10 @@
                   <button type="button" class="buuton-bookmarks">В Закладки</button>
                 </div>
                 <figure class="products-item-image">
-                  <img src="img/bfg-6000.jpg" alt="Перфоратор BOSCH BFG 6000">
+                  <img src="img/bfg-6000.jpg" width="144" height="128" alt="Перфоратор BOSCH BFG 6000">
                 </figure>
                 <span>Перфоратор BOSCH <br>BFG 6000<br><del>30500 Р.</del></span>
-                <a class="button-products" href="">25&nbsp;500&nbsp;р.</a>
+                <a class="button-products" href="#">25&nbsp;500&nbsp;р.</a>
               </li>
               <li class="products-item">
                 <div class="products-item-bay">
@@ -215,10 +218,10 @@
                   <button type="button" class="buuton-bookmarks">В Закладки</button>
                 </div>
                 <figure class="products-item-image">
-                  <img src="img/bfg-3000.jpg" alt="Перфоратор BOSCH BFG 2000">
+                  <img src="img/bfg-3000.jpg" width="127" height="112" alt="Перфоратор BOSCH BFG 2000">
                 </figure>
                 <span>Перфоратор BOSCH <br>BFG 2000<br><del></del></span>
-                <a class="button-products" href="">12&nbsp;500&nbsp;р.</a>
+                <a class="button-products" href="#">12&nbsp;500&nbsp;р.</a>
               </li>
               <li class="products-item">
                 <div class="products-item-bay">
@@ -226,10 +229,10 @@
                   <button type="button" class="buuton-bookmarks">В Закладки</button>
                 </div>
                 <figure class="products-item-image">
-                  <img src="img/bfg-3000.jpg" alt="Перфоратор BOSCH BFG 3000">
+                  <img src="img/bfg-3000.jpg" width="127" height="112" alt="Перфоратор BOSCH BFG 3000">
                 </figure>
                 <span>Перфоратор BOSCH <br>BFG 3000<br><del>22500 Р.</del></span>
-                <a class="button-products" href="">15&nbsp;500&nbsp;р.</a>
+                <a class="button-products" href="#">15&nbsp;500&nbsp;р.</a>
               </li>
               <li class="products-item">
                 <div class="products-item-bay">
@@ -237,10 +240,10 @@
                   <button type="button" class="buuton-bookmarks">В Закладки</button>
                 </div>
                 <figure class="products-item-image">
-                  <img src="img/bfg-6000.jpg" alt="Перфоратор BOSCH BFG 6000">
+                  <img src="img/bfg-6000.jpg" width="144" height="128" alt="Перфоратор BOSCH BFG 6000">
                 </figure>
                 <span>Перфоратор BOSCH <br>BFG 6000<br><del>30500 Р.</del></span>
-                <a class="button-products" href="">25&nbsp;500&nbsp;р.</a>
+                <a class="button-products" href="#">25&nbsp;500&nbsp;р.</a>
               </li>
               <li class="products-item">
                 <div class="products-item-bay">
@@ -248,25 +251,17 @@
                   <button type="button" class="buuton-bookmarks">В Закладки</button>
                 </div>
                 <figure class="products-item-image">
-                  <img src="img/bfg-3000.jpg" alt="Перфоратор BOSCH BFG 2000">
+                  <img src="img/bfg-3000.jpg" width="127" height="112" alt="Перфоратор BOSCH BFG 2000">
                 </figure>
                 <span>Перфоратор BOSCH <br>BFG 2000<br><del></del></span>
-                <a class="button-products" href="">12&nbsp;500&nbsp;р.</a>
+                <a class="button-products" href="#">12&nbsp;500&nbsp;р.</a>
               </li>
-              <div id="openModalBay" class="modalBay">
-                <p>Товар добавлен в корзину!</p>
-                <div class="modalBay-nav">
-                  <button>Оформить заказ</button>
-                  <button>Продолжить покупки</button>
-                </div>
-                <a class="modalLost-close"></a>
-              </div> 
             </ul>  
             <ul class="products-list-navigation no-bulites">
-              <li><a class="active" href="">1</a></li>
-              <li><a href="">2</a></li>
-              <li><a href="">3</a></li>
-              <li><a href="">Следующая</a></li>
+              <li><a class="active" href="#">1</a></li>
+              <li><a href="#">2</a></li>
+              <li><a href="#">3</a></li>
+              <li><a href="#">Следующая</a></li>
             </ul>
           </div>  
         </section>
@@ -281,15 +276,15 @@
         <div class="footer-navigation-bar">
           <div class="footer-navigation" >
             <div class="footer-navigation-menu">
-              <a href="" class="footer-navigation-logo"> 
+              <a href="index.html" class="footer-navigation-logo"> 
                 <img src="img/Logo-teh.svg" width="138" height="23" alt="Логотип компании «Техномарт»">
               </a>
               <ul class="footer-nav no-bulites">
-                <li><a href="">Компания</a></li>
-                <li><a href="">Новости</a></li>
-                <li><a href="">Каталог</a></li>
-                <li><a href="">Доставка</a></li>
-                <li><a href="">Контакты</a></li>
+                <li><a href="#">Компания</a></li>
+                <li><a href="#">Новости</a></li>
+                <li><a href="#">Каталог</a></li>
+                <li><a href="#">Доставка</a></li>
+                <li><a href="#">Контакты</a></li>
               </ul>
             </div>
             <div> 
@@ -299,10 +294,10 @@
                   <a href="tel:88125550555">+7 (812) 555-05-55</a>
                 </div>
                 <ul class="footer-cat-nav no-bulites">
-                  <li><a href="">Материалы</a></li>
-                  <li><a href="">Техника</a></li>
-                  <li><a href="">Инструмент</a></li>
-                  <li><a href="">Спецпредложения</a></li>
+                  <li><a href="#">Материалы</a></li>
+                  <li><a href="#">Техника</a></li>
+                  <li><a href="#">Инструмент</a></li>
+                  <li><a href="#">Спецпредложения</a></li>
                 </ul>
               </div>
             </div>  
@@ -317,17 +312,17 @@
             <div>  
               <ul class="footer-social no-bulites">
                 <li class="social-vk social">
-                  <a href="">
+                  <a href="#">
                     <span class="visually-hidden">Вконтакте</span> 
                   </a> 
                 </li>
                 <li class="social-face social">
-                  <a href="">
+                  <a href="#">
                     <span class="visually-hidden">Фейсбук</span>
                   </a>
                 </li>
                 <li class="social-inst social">
-                  <a href="">
+                  <a href="#">
                     <span class="visually-hidden">Инстаграмм</span>
                   </a>
                 </li>
@@ -335,13 +330,22 @@
             </div>   
             <div>  
               <ul class="footer-copyright no-bulites">
-                <li>Обратная связь:<br><a href="">mail@htmlacademy.ru</a></li>
-                <li>Разработано - <br><a href="">htmlacademy.ru</a></li>
+                <li>Обратная связь:<br><a href="#">mail@htmlacademy.ru</a></li>
+                <li>Разработано - <br><a href="#">htmlacademy.ru</a></li>
               </ul>
             </div>
           </div> 
         </div>
       </footer>
+      <div id="openModalBay" class="modalBay">
+        <p>Товар добавлен в корзину!</p>
+        <div class="modalBay-nav">
+          <button>Оформить заказ</button>
+          <button>Продолжить покупки</button>
+        </div>
+        <a class="modalLost-close"></a>
+        <script src="js/script.js"></script>
+      </div> 
     </body>
   </html>
   
