--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 <a class="slide-button-next active" href="#"></a>
                 <a class="slide-button-back" href="#"></a>
               </div>
-              <img src="img/perfocart.jpg" width="983" height="430" alt="Перфораторы"> <!--Слайдер-->
+              <img src="img/perforator.png" width="983" height="430" alt="Перфораторы"> <!--Слайдер-->
               <h2>Перфораторы</h2>
               <p>Настоящие мужские игрушки</p>
               <a class="perfocart-slide-nav" href="catalog.html">Открыть каталог</a>
@@ -88,7 +88,7 @@
           </li>
           <li class="categories-slider">
             <div class="perfocart-slide-next">
-              <img src="img/perfocart2.jpg" width="983" height="430" alt="Перфораторы"> <!--Слайдер-->
+              <img src="img/perforatornext.png" width="983" height="430" alt="Перфораторы"> <!--Слайдер-->
               <h2>Перфораторы</h2>
               <p>Настоящие мужские игрушки</p>
               <a class="perfocart-slide-nav" href="#">Открыть каталог</a>
@@ -237,7 +237,8 @@
               гарантии. Мы обменяем сгоревший товар на новый.
               <br>Дом уж востановите как-нибудь сами.
             </span>
-          </div>          <div class="service-slide-credit">
+          </div>          
+          <div class="service-slide-credit">
             <h3>Кредит</h3>
             <span>Залезть в долговую яму стало проще!
               <br> Кредитные консультанты придут вам на помощь
@@ -296,7 +297,6 @@
                 <li><a href="#">Техника</a></li>
                 <li><a href="#">Инструмент</a></li>
                 <li><a href="#">Спецпредложения</a></li>
-              
               </ul>
             </div>
           </div>  
