--- a/catalog.html
+++ b/catalog.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Каталог</title>
     <link href="css/normalize.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
+    <link href="css/style.min.css" rel="stylesheet">
   </head>
     <body class="page-body">
       <header class="page-header">
@@ -34,7 +34,7 @@
           </div>
           <div class="button-order-private">
             <div class="button-link">
-              <a href="#" class="button-private">Равшан Джамшутович </a>
+              <a href="#" class="button-private">Равшан Джамшутович asdfasdf</a>
               <a class="button-private-exit" href="#">
                 <span class="visually-hidden">Выйти</span>
               </a>
@@ -305,7 +305,6 @@
                   <li><a href="#">Материалы</a></li>
                   <li><a href="#">Техника</a></li>
                   <li><a href="#">Инструмент</a></li>
-                  <li><a href="#">Спецпредложения</a></li>
                   <li><a href="#">Спецпредложения</a></li>
                 </ul>
               </div>
